feat: login authentication

--- a/web-app/src/app/components/login/login.component.html
+++ b/web-app/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="form-container">
      <h1>Login</h1>
-     <form action="" [formGroup]="loginForm">
+     <form  [formGroup]="loginForm" (ngSubmit) = 'submit()'>
           <mat-form-field>
                <input type="text" matInput placeholder="Enter Email Address" formControlName="email">
           <mat-error *ngIf="email?.errors?.['required']">Email is Required</mat-error>
