--- a/web-app/src/app/components/user-profile/user-profile.component.html
+++ b/web-app/src/app/components/user-profile/user-profile.component.html
@@ -2,5 +2,5 @@
   <h1>User Profile</h1>
   <div class="profile-image"><img [src]="" width="120" height="120" [src]="user.photoURL ?? 'assets/images/profile-placeholder.jpg' " alt=""></div>
 <button mat-mini-fab (click)="inputField.click()">Edit</button>
-  <input type="file" #inputField type="file" hidden >
+  <input type="file" #inputField type="file" hidden (change)="uploadImage($event, user">
 </div>
