--- a/web-app/src/app/components/sign-up/sign-up.component.html
+++ b/web-app/src/app/components/sign-up/sign-up.component.html
@@ -1,46 +1,48 @@
 <div class="form-container mat-elevation-z5">
      <h1>Sign Up a New User!</h1>
-     <form [formGroup]="signUpForm" (ngSubmit)="submit()">
+     <form #signUpForm="ngForm"  (ngSubmit)="getUserFormData( ng-form.value )">
        <mat-form-field>
-         <input matInput placeholder="Name" formControlName="name" />
-         <mat-error *ngIf="name?.errors?.['required']">
-           Name is required
-         </mat-error>
+         <input matInput placeholder="Name" formControlName="name" ngModel />
+         <!-- <mat-error *ngIf="name?.errors?.['required']">
+           Name is required [formGroup]="signUpForm"
+         </mat-error> -->
        </mat-form-field>
        <mat-form-field>
-         <input matInput placeholder="Email address" formControlName="email" />
-         <mat-error *ngIf="email?.errors?.['required']">
+         <input ngModel matInput placeholder="Email address" formControlName="email" />
+         <!-- <mat-error *ngIf="email?.errors?.['required']">
            Email address is required
-         </mat-error>
-         <mat-error *ngIf="email?.errors?.['email']">
+         </mat-error> -->
+         <!-- <mat-error *ngIf="email?.errors?.['email']">
            Please enter a valid email address
-         </mat-error>
+         </mat-error> -->
        </mat-form-field>
        <mat-form-field>
          <input
+         ngModel 
            matInput
            type="password"
            placeholder="Password"
            formControlName="password"
          />
-         <mat-error *ngIf="password?.errors?.['required']">
-           Password is required
-         </mat-error>
+         <!-- <mat-error *ngIf="password?.errors?.['required']"> -->
+           <!-- Password is required -->
+         <!-- </mat-error> -->
        </mat-form-field>
        <mat-form-field>
          <input
+         ngModel
            matInput
            type="password"
            placeholder="Confirm Password"
            formControlName="confirmPassword"
          />
-         <mat-error *ngIf="confirmPassword?.errors?.['required']">
+         <!-- <mat-error *ngIf="confirmPassword?.errors?.['required']">
            Confirm Password is required
-         </mat-error>
+         </mat-error> -->
        </mat-form-field>
-       <mat-error *ngIf="signUpForm.errors?.['passwordsDontMatch']">
+       <!-- <mat-error *ngIf="signUpForm.errors?.['passwordsDontMatch']">
            Passwords should match
-       </mat-error>
+       </mat-error> -->
        <div class="center margin-top">
          <button type="submit" mat-raised-button color="primary">Sign Up!</button>
        </div>
